force-app/main/default/objects/Application__c/fields/Adaptability_Tech_Curiosity__c.field-meta.xml
<CustomField>
    <fullName>Adaptability_Tech_Curiosity__c</fullName>
    <label>Adaptability &amp; Tech Curiosity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>