force-app/main/default/objects/Application__c/fields/Agile_Scrum_Experience__c.field-meta.xml
<CustomField>
    <fullName>Agile_Scrum_Experience__c</fullName>
    <label>Agile/Scrum Experience</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>