force-app/main/default/objects/Application__c/fields/Analyze_Complex_Problems__c.field-meta.xml
<CustomField>
    <fullName>Analyze_Complex_Problems__c</fullName>
    <label>Analyze Complex Problems</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>