force-app/main/default/objects/Application__c/fields/Application_Rating__c.field-meta.xml
<CustomField>
    <fullName>Application_Rating__c</fullName>
    <description>AI-generated or manually assigned score that reflects the candidate’s fit for the specific job.</description>
    <label>Application Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>