force-app/main/default/objects/Application__c/fields/Client_Interaction_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Client_Interaction_Requirements__c</fullName>
    <label>Client Interaction &amp; Requirements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>