force-app/main/default/objects/Application__c/fields/Consulting_Experience__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Experience__c</fullName>
    <label>Consulting Experience</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>