force-app/main/default/objects/Application__c/fields/Cultural_Fit_for_Entelect__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Fit_for_Entelect__c</fullName>
    <label>Cultural Fit for Entelect</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>