force-app/main/default/objects/Application__c/fields/Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Requirements__c</fullName>
    <description>A summary of how well the candidate meets the job&apos;s minimum requirements (e.g., pass/fail or checklist).</description>
    <label>Minimum Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>