force-app/main/default/objects/Application__c/fields/Overview_of_applicant__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_applicant__c</fullName>
    <label>Overview of applicant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>