force-app/main/default/objects/Application__c/fields/Project_Team_Leadership_Experience__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Leadership_Experience__c</fullName>
    <label>Project/Team Leadership Experience</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>