force-app/main/default/objects/Application__c/fields/Self_Assessment_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Awareness__c</fullName>
    <label>Self Assessment &amp; Awareness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>