force-app/main/default/objects/Application__c/fields/Solution_Design_Innovation__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Innovation__c</fullName>
    <label>Solution Design &amp; Innovation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>