force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Screen</fullName>
            </value>
            <value>
                <fullName>Telephonic Screening</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Potential Jedi</fullName>
            </value>
            <value>
                <fullName>Contract creation</fullName>
                <isActive>false</isActive>
                <label>Contract creation</label>
            </value>
            <value>
                <fullName>Contract signed</fullName>
                <isActive>false</isActive>
                <label>Contract signed</label>
            </value>
            <value>
                <fullName>Hiring Manager Interview</fullName>
                <isActive>false</isActive>
                <label>Hiring Manager Interview</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Post  manager interview</fullName>
                <isActive>false</isActive>
                <label>Post  manager interview</label>
            </value>
            <value>
                <fullName>Recruiter Interview</fullName>
                <isActive>false</isActive>
                <label>Recruiter Interview</label>
            </value>
            <value>
                <fullName>Recruiter Review</fullName>
                <isActive>false</isActive>
                <label>Recruiter Review</label>
            </value>
            <value>
                <fullName>Review Verifications</fullName>
                <isActive>false</isActive>
                <label>Review Verifications</label>
            </value>
            <value>
                <fullName>Salary negotiations</fullName>
                <isActive>false</isActive>
                <label>Salary negotiations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>