force-app/main/default/objects/Application__c/fields/Teamwork_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Teamwork_Collaboration__c</fullName>
    <label>Teamwork &amp; Collaboration</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>