force-app/main/default/objects/Application__c/fields/Technical_Explanation_Clarity__c.field-meta.xml
<CustomField>
    <fullName>Technical_Explanation_Clarity__c</fullName>
    <label>Technical Explanation Clarity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>