force-app/main/default/objects/Application__c/fields/Troubleshooting_Debugging__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Debugging__c</fullName>
    <label>Troubleshooting &amp; Debugging</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>