force-app/main/default/objects/Application__c/fields/Understands_Business_Behind_Systems__c.field-meta.xml
<CustomField>
    <fullName>Understands_Business_Behind_Systems__c</fullName>
    <label>Understands Business Behind Systems</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>