force-app/main/default/objects/Application__c/fields/Years_Experience_with_Primary_Skill__c.field-meta.xml
<CustomField>
    <fullName>Years_Experience_with_Primary_Skill__c</fullName>
    <label>Years Experience with Primary Skill</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>